Changelog
=========

(name of developer listed in brackets)

2.3.2dev (unreleased)
---------------------

- Add Brazilian Portuguese translation.
  [hvelarde]

- Fix package dependencies and metadata; explicitly drop support for Plone 4.0.
  [hvelarde]

- Added option to show image and description in dropdownmenu [espen]

- Codebase cleanup.
  [thet]

- Add markup and a profile to support Twitter Bootstrap dropdowns.
  [rpatterson]

- Handle Unauthorized exceptions when rendered in context of unauthorized
  objects. Can happen with standard_error_pages
  [do3cc]


2.3.1 (2012-07-26)
------------------

- move css from import to link
  [toutpt]

2.3 (2012-01-23)
----------------

- Moved the plone.app.testing and unittest2 dependencies to a test extra.
  [Maurits]

- Only load the CMF permissions when on Plone 4.1 or higher.
  [maurits]

- fix unkown version in quickinstaller.
  [toutpt]

- fix typo in skins.xml provide wrong install on sunburst
  [toutpt]

- rename dropdown css from dtml to static css
  [toutpt]

2.2 (August 17, 2011)
---------------------

- Javascript simplification using jQuery.
  [spliter]

- Fixed the INavigationRoot treatment by the dropdown menus.
  Fixes
  https://github.com/mishunov/webcouturier.dropdownmenu/pull/3 and
  https://github.com/mishunov/webcouturier.dropdownmenu/issues/1
  [spliter]

- Add dropdowmenu layer to all themes.
  [thomasdesvenain]

- Added enable_parent_clickable option in config panel.  The default
  of True corresponds with standard behaviour until now.  When
  False, menu items that have children are not clickable.
  [maurits]

- Fix Plone4.1 startup issue: http://dev.plone.org/plone/ticket/11837
  [toutpt]

2.1 (2010-09-23)
----------------

- Add z3c.autoinclude entry point so ZCML is loaded automatically in Plone.
  [davisagli]

- Fix icons for compatibility with Plone 4.
  [matthal]

- Added support for i18n
  [macagua]

- Added Spanish translation
  [macagua]

2.0 (2009-05-26)
----------------
