@@ -5,37 +5,48 @@
     xmlns:i18n="http://namespaces.zope.org/i18n"
     i18n_domain="webcouturier.dropdownmenu">
 
-    <i18n:registerTranslations directory="locales" />
-    <cmf:registerDirectory name="dropdownmenu"/>
-    <cmf:registerDirectory name="dropdownmenu_sunburst"/>
+  <i18n:registerTranslations directory="locales" />
+  <cmf:registerDirectory name="dropdownmenu" />
+  <cmf:registerDirectory name="dropdownmenu_sunburst" />
 
-    <include package="plone.browserlayer" />
-    <include package="Products.CMFCore" file="permissions.zcml"
-             xmlns:zcml="http://namespaces.zope.org/zcml"
-             zcml:condition="have plone-41" />
+  <include package="plone.browserlayer" />
+  <include package="Products.CMFCore" file="permissions.zcml"
+           xmlns:zcml="http://namespaces.zope.org/zcml"
+           zcml:condition="have plone-41"
+           />
 
-    <include package=".browser" />
-    <include file="upgrades.zcml" />
+  <include package=".browser" />
+  <include file="upgrades.zcml" />
 
-    <adapter factory=".configlet.DropdownControlPanelAdapter" />
+  <adapter factory=".configlet.DropdownControlPanelAdapter" />
 
-    <genericsetup:registerProfile
-        name="default"
-        title="Dropdown menu"
-        directory="profiles/default"
-        description="Extension profile for dropdown menu."
-        provides="Products.GenericSetup.interfaces.EXTENSION"/>
-    <genericsetup:registerProfile
-        name="bootstrap"
-        title="Dropdown menus for Twitter Bootstrap"
-        description="Modify the install to work with Twitter Bootstrap."
-        provides="Products.GenericSetup.interfaces.EXTENSION"/>
+  <genericsetup:registerProfile
+      name="default"
+      title="Dropdown menu"
+      directory="profiles/default"
+      description="Extension profile for dropdown menu."
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
 
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="Dropdown menu (uninstall)"
+      directory="profiles/uninstall"
+      description="Uninstall profile for the dropdown menu."
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
 
-    <utility
-        provides="zope.schema.interfaces.IVocabularyFactory"
-        component=".vocabularies.SizeVocabulary"
-        name="webcouturier.dropdownmenu.SizeVocabulary"
-        />
+  <genericsetup:registerProfile
+      name="bootstrap"
+      title="Dropdown menus for Twitter Bootstrap"
+      description="Modify the install to work with Twitter Bootstrap."
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
+  <utility
+      provides="zope.schema.interfaces.IVocabularyFactory"
+      component=".vocabularies.SizeVocabulary"
+      name="webcouturier.dropdownmenu.SizeVocabulary"
+      />
 
 </configure>
