@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <layers>
     <layer name="webcouturier.dropdownmenu"
            interface="webcouturier.dropdownmenu.browser.interfaces.IDropdownSpecific" />
