@@ -1,6 +1,4 @@
 <?xml version="1.0"?>
-<!-- This file holds the setup configuration for the portal_css tool. -->
-
 <object name="portal_css">
     <!-- To smoothly switch existing sites from browser resource
          to stylesheet in skins/ folder -->
