@@ -1,7 +1,4 @@
 <?xml version="1.0"?>
-<!-- This file holds the setup configuration for the portal_javascripts tool.
-     -->
-
 <object name="portal_javascripts">
 
  <javascript id="++resource++dropdown-menu.js"
