@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    i18n:domain="plone">
+  <configlet title="Dropdown menu configuration" action_id="DropdownConfiguration" remove="true" />
+</object>
