@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+  <javascript id="++resource++dropdown-menu.js" remove="true" />
+</object>
