@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+  <object name="dropdownmenu" remove="true" />
+  <object name="dropdownmenu_sunburst" remove="true" />
+  <skin-path name="*">
+    <layer name="dropdownmenu" remove="true" />
+  </skin-path>
+  <skin-path name="Sunburst Theme">
+    <layer name="dropdownmenu_sunburst" remove="true" />
+  </skin-path>
+</object>
