@@ -1,10 +1,12 @@
 Changelog
 =========
 
-(name of developer listed in brackets)
 
 2.3.2dev (unreleased)
 ---------------------
+
+- Add uninstall profile (Fix https://github.com/collective/webcouturier.dropdownmenu/issues/10)
+  [davilima6]
 
 - Add Brazilian Portuguese translation.
   [hvelarde]
@@ -31,6 +33,7 @@ Changelog
 - move css from import to link
   [toutpt]
 
+
 2.3 (2012-01-23)
 ----------------
 
@@ -48,6 +51,7 @@ Changelog
 
 - rename dropdown css from dtml to static css
   [toutpt]
+
 
 2.2 (August 17, 2011)
 ---------------------
@@ -72,6 +76,7 @@ Changelog
 - Fix Plone4.1 startup issue: http://dev.plone.org/plone/ticket/11837
   [toutpt]
 
+
 2.1 (2010-09-23)
 ----------------
 
@@ -86,6 +91,7 @@ Changelog
 
 - Added Spanish translation
   [macagua]
+
 
 2.0 (2009-05-26)
 ----------------
@@ -108,6 +114,7 @@ Changelog
   templates without a #portal-globalnav.
   [davisagli]
 
+
 1.1.5 (2008-04-19)
 ------------------
 
@@ -126,6 +133,7 @@ Changelog
   users now to decide what version of plone.browserlayer to use.
   [spliter]
 
+
 1.1.4 (2008-04-11)
 ------------------
 
@@ -133,6 +141,7 @@ Changelog
   root differs from site root. In this case you could get
   "'NoneType' object has no attribute 'endswith'" error
   [spliter]
+
 
 1.1.3 (2008-04-09)
 ------------------
@@ -157,6 +166,7 @@ Changelog
   removes some boilerplate code and makes sure everything is initialised
   properly.
   [wichert]
+
 
 1.1 (2007-10-29)
 ----------------
